--- a/package.json
+++ b/package.json
@@ -7,19 +7,32 @@
     "build": "parcel build ./src/index.html"
   },
   "devDependencies": {
-    "parcel": "^2.0.0",
+    "assert": "^2.1.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.2.0"
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^5.5.0||^6.0.0",
+    "eslint": "^7.2.0",
+    "events": "^3.3.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "parcel": "^2.0.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tty-browserify": "^0.0.1",
+    "url": "^0.11.4",
+    "util": "^0.12.5"
   },
   "keywords": [
     "css",
     "javascript"
   ],
   "dependencies": {
+    "@fortawesome/fontawesome-free": "6.7.2",
+    "@popperjs/core": "2.11.8",
     "@triedel/edge-ml": "4.0.1-c",
     "bootstrap": "5.3.6",
-    "@popperjs/core": "2.11.8",
-    "@fortawesome/fontawesome-free": "6.7.2",
     "mobile-detect": "1.4.5",
     "require-from-url": "3.1.3",
     "systemjs": "6.15.1"
